@@ -611,4 +611,5 @@
 
 2010-07-26
 	* syscall.c: system calls 'sched_getparam' and 'sched_setparam' implemented.
+	* syscall.c: system call 'clock_getres' implemented.
 
